fix: AwList make advanced filters work fix: Missing props on some components refactor: Move exportCallBack from `AwesomeTable` to `apiListMixin` is use by `AwesomeList` too fix: More action button should be wrapped in `btn-group` because is doesn't work
> Trello card: https://trello.com/c/rfFSDlZo/62-awlist-make-advanced-filters-work

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -27,6 +27,6 @@
 }
 
 button.btn.aw-button-add {
-  background-color: $primary-color !important;
+  background-color: var(--primary) !important;
   color: #fff !important;
 }
